--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="div">
-        <button id="btn" onclick="alert('Hola!')">Saludar</button>
+        <button id="btn">Saludar</button>
     </div>
 
     <script src="eventos.js"></script>
